{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 15,
  "lineage": "81f0a390-7a37-801e-948f-6f0c0d36a4e2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:vpc/vpc-0f688b66712843052",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00768cb48ff674dc7",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0636359a46a1f8924",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f688b66712843052",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0e1b59f52d5b4bd",
            "owner_id": "555035388828",
            "region": "ca-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:loadbalancer/app/nginx-lb/99e1c61537155a09",
            "arn_suffix": "app/nginx-lb/99e1c61537155a09",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-1539102370.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:loadbalancer/app/nginx-lb/99e1c61537155a09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "region": "ca-central-1",
            "security_groups": [
              "sg-03ff6d71f2703bb0f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085ad43e9ac7d25f4"
              },
              {
                "subnet_id": "subnet-0862c47389afc4d0e"
              },
              {
                "subnet_id": "subnet-0b26e3f17769a41c3"
              }
            ],
            "subnets": [
              "subnet-085ad43e9ac7d25f4",
              "subnet-0862c47389afc4d0e",
              "subnet-0b26e3f17769a41c3"
            ],
            "tags": {
              "Name": "nginx-lb"
            },
            "tags_all": {
              "Name": "nginx-lb"
            },
            "vpc_id": "vpc-0f688b66712843052",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:loadbalancer/app/nginx-lb/99e1c61537155a09"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:listener/app/nginx-lb/99e1c61537155a09/922c2483000fcb19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:targetgroup/nginx-tg/f629486224d93470",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:listener/app/nginx-lb/99e1c61537155a09/922c2483000fcb19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:loadbalancer/app/nginx-lb/99e1c61537155a09",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:listener/app/nginx-lb/99e1c61537155a09/922c2483000fcb19"
          },
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_task",
            "aws_security_group.lb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:targetgroup/nginx-tg/f629486224d93470",
            "arn_suffix": "targetgroup/nginx-tg/f629486224d93470",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:targetgroup/nginx-tg/f629486224d93470",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f688b66712843052"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:555035388828:targetgroup/nginx-tg/f629486224d93470"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:security-group/sg-069bf75c362a6a7a0",
            "description": "Allow inbound HTTP traffic to ECS containers",
            "egress": [],
            "id": "sg-069bf75c362a6a7a0",
            "ingress": [],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "555035388828",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f688b66712843052"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555035388828",
            "id": "sg-069bf75c362a6a7a0",
            "region": "ca-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:security-group/sg-03ff6d71f2703bb0f",
            "description": "Allow inbound HTTP traffic to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ff6d71f2703bb0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-lb-sg",
            "name_prefix": "",
            "owner_id": "555035388828",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f688b66712843052"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555035388828",
            "id": "sg-03ff6d71f2703bb0f",
            "region": "ca-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecg_sg_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:security-group-rule/sgr-0bede0016d5e974ee",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0bede0016d5e974ee",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-069bf75c362a6a7a0",
            "security_group_rule_id": "sgr-0bede0016d5e974ee",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555035388828",
            "id": "sgr-0bede0016d5e974ee",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.ecs_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:security-group-rule/sgr-01ad32ca80b3c403f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01ad32ca80b3c403f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-069bf75c362a6a7a0",
            "security_group_rule_id": "sgr-01ad32ca80b3c403f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555035388828",
            "id": "sgr-01ad32ca80b3c403f",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.ecs_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_sg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:555035388828:security-group-rule/sgr-089fd377633eaad33",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-089fd377633eaad33",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-central-1",
            "security_group_id": "sg-069bf75c362a6a7a0",
            "security_group_rule_id": "sgr-089fd377633eaad33",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555035388828",
            "id": "sgr-089fd377633eaad33",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_security_group.ecs_sg"
          ]
        }
      ]
    }
  ]
}